actualizacion de page

--- a/Index.html
+++ b/Index.html
@@ -86,6 +86,7 @@
     </div>
   </section>
   <!-- *************** section of Odoo ************ -->
+
   <section class="section-odoo section-1">
     <div class="container-main">
       <div id="carouselExampleDark" class="carousel carousel-dark  slide container" data-bs-ride="carousel">
@@ -107,16 +108,15 @@
           <div class="carousel-item" data-bs-interval="2000">
             <div class="d-block w-100 carousel-i"></div>
             <div class="carousel-caption d-block d-md-block">
-              <h5>Second slide label</h5>
-              <p class="paragraph">Some representative placeholder content for the second slide.</p>
+              <h5 class="title-section">Always Certified In The Latest Version Of <span>Odoo</span></h5>
+              <p class="paragraph">Some representative placeholder content for the first slide.</p>
+              <img src="./img/odoo-certified04.png" alt="Gold Partner Odoo" class="cert-odoo">
             </div>
           </div>
         </div>
       </div>
     </div>
   </section>
-
-
 
   <!-- ********************** SECTION SERVICES ********************** -->
   <section class="section-2" id="section-services">
@@ -131,7 +131,8 @@
             </div>
             <div class="feature-content">
               <h5 class="title-section-2"> Odoo ERP Implementation Service</h5>
-              <p class="paragraph"> Odoo is a suite of business apps that cover all your company needs. We are the leaders in the region,
+              <p class="paragraph"> Odoo is a suite of business apps that cover all your company needs. We are the
+                leaders in the region,
                 whith the necessary experience to make your project a success.</p>
             </div>
           </div>
@@ -144,7 +145,8 @@
             </div>
             <div class="feature-content">
               <h5 class="title-section-2"> Software Development As A Service</h5>
-              <p class="paragraph">Do you need to develop a software project? We provide you with a select team of developers with the
+              <p class="paragraph">Do you need to develop a software project? We provide you with a select team of
+                developers with the
                 technologies that you require for your project.</p>
             </div>
           </div>
@@ -168,7 +170,7 @@
           </button>
         </p>
         <div class="collapse" id="collapseExample">
-          <div class="card card-body paragraph m-auto">
+          <div class="card card-body paragraph m-auto p-busines-b">
             Grupo Treming is a consulting firm leader in the area of IT in Latin
             America, founded in 2010, with the sole purpose of consolidating
             a firm formed by highly experienced consultants, which allows us
@@ -411,6 +413,160 @@
     </div>
   </section>
 
+  <!-- ********************** SECCION WHAT OUR CLIENT SAY *********************-->
+  <section class="section-1">
+    <div class="container-main">
+      <h1 class="title-section">What Our <span>Client Say</span></h1>
+      <div id="carouselExampleDark" class="carousel carousel-dark mt-3 mb-3" data-bs-ride="carousel">
+        <div class="carousel-indicators indicator-position">
+          <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="0" class="active indic"
+            aria-current="true" aria-label="Slide 1"></button>
+          <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="1" class="indic"
+            aria-label="Slide 2"></button>
+        </div>
+        <div class="carousel-inner">
+          <div class="carousel-item" data-bs-interval="10000">
+            <div class="d-block w-100"></div>
+            <div class="row row-cols-1 row-cols-md-3 g-4 p-4">
+              <div class="col">
+                <div class="card h-100 shadow border border-0">
+                  <div class="m-auto circle position-relative mt-3">
+                    <img src="./img/none.png" class="rounded-circle" alt="customer" style="width: 100%;">
+                    <div class="position-absolute top-50 start-100 translate-middle quote"><img src="./img/quotes.png" class="rounded-circle" alt="customer" style="width: 100%;"></div>
+                  </div>
+                  <div class="card-body">
+                    <p class="card-text text-center paragraph p-testimonial">TREMING is acompany that combines vision
+                      and organization, witch provides an
+                      excellent service that demonstrates its
+                      professionalism. The work and its result
+                      show that a single company is already part
+                      of our strategic partners that they hope to
+                      count on for a long time to consolidate our
+                      process and grow together.</p>
+                    <h5 class="card-title text-center">Hugo H. Hernandez</h5>
+                    <p class="card-text text-center paragraph p-testimonial mb-0">CEO,K2 Inglaterra</p>
+                    <img width="100px" src="./img/estre.png" alt="adoc" class="img-fluid m-auto d-block mt-3">
+                  </div>
+                </div>
+              </div>
+              <div class="col">
+                <div class="card h-100 shadow border border-0">
+                  <div class="m-auto circle position-relative mt-3">
+                    <img src="./img/none.png" class="rounded-circle" alt="customer" style="width: 100%;">
+                    <div class="position-absolute top-50 start-100 translate-middle quote"><img src="./img/quotes.png" class="rounded-circle" alt="customer" style="width: 100%;"></div>
+                  </div>
+                  <div class="card-body">
+                    <p class="card-text text-center paragraph p-testimonial">TREMING is acompany that combines vision
+                      and organization, witch provides an
+                      excellent service that demonstrates its
+                      professionalism. The work and its result
+                      show that a single company is already part
+                      of our strategic partners that they hope to
+                      count on for a long time to consolidate our
+                      process and grow together.</p>
+                    <h5 class="card-title text-center">Hugo H. Hernandez</h5>
+                    <p class="card-text text-center paragraph p-testimonial mb-0">CEO,K2 Inglaterra</p>
+                    <img width="100px" src="./img/estre.png" alt="adoc" class="img-fluid m-auto d-block mt-3">
+                  </div>
+                </div>
+              </div>
+              <div class="col">
+                <div class="card h-100 shadow border border-0">
+                  <div class="m-auto circle position-relative mt-3">
+                    <img src="./img/none.png" class="rounded-circle" alt="customer" style="width: 100%;">
+                    <div class="position-absolute top-50 start-100 translate-middle quote"><img src="./img/quotes.png" class="rounded-circle" alt="customer" style="width: 100%;"></div>
+                  </div>
+                  <div class="card-body">
+                    <p class="card-text text-center paragraph p-testimonial">TREMING is acompany that combines vision
+                      and organization, witch provides an
+                      excellent service that demonstrates its
+                      professionalism. The work and its result
+                      show that a single company is already part
+                      of our strategic partners that they hope to
+                      count on for a long time to consolidate our
+                      process and grow together.</p>
+                    <h5 class="card-title text-center">Hugo H. Hernandez</h5>
+                    <p class="card-text text-center paragraph p-testimonial mb-0">CEO,K2 Inglaterra</p>
+                    <img width="100px" src="./img/estre.png" alt="adoc" class="img-fluid m-auto d-block mt-3">
+                  </div>
+                </div>
+
+              </div>
+            </div>
+          </div>
+          <div class="carousel-item active" data-bs-interval="1000">
+            <div class="row row-cols-1 row-cols-md-3 g-4 p-4">
+              <div class="col">
+                <div class="card h-100 shadow border border-0">
+                  <div class="m-auto circle position-relative mt-3">
+                    <img src="./img/none.png" class="rounded-circle" alt="customer" style="width: 100%;">
+                    <div class="position-absolute top-50 start-100 translate-middle quote"><img src="./img/quotes.png" class="rounded-circle" alt="customer" style="width: 100%;"></div>
+                  </div>
+                  <div class="card-body">
+                    <p class="card-text text-center paragraph p-testimonial">TREMING is acompany that combines vision
+                      and organization, witch provides an
+                      excellent service that demonstrates its
+                      professionalism. The work and its result
+                      show that a single company is already part
+                      of our strategic partners that they hope to
+                      count on for a long time to consolidate our
+                      process and grow together.</p>
+                    <h5 class="card-title text-center">Hugo H. Hernandez</h5>
+                    <p class="card-text text-center paragraph p-testimonial mb-0">CEO,K2 Inglaterra</p>
+                    <img width="100px" src="./img/estre.png" alt="adoc" class="img-fluid m-auto d-block mt-3">
+                  </div>
+                </div>
+              </div>
+              <div class="col">
+                <div class="card h-100 shadow border border-0">
+                  <div class="m-auto circle position-relative mt-3">
+                    <img src="./img/none.png" class="rounded-circle" alt="customer" style="width: 100%;">
+                    <div class="position-absolute top-50 start-100 translate-middle quote"><img src="./img/quotes.png" class="rounded-circle" alt="customer" style="width: 100%;"></div>
+                  </div>
+                  <div class="card-body">
+                    <p class="card-text text-center paragraph p-testimonial">TREMING is acompany that combines vision
+                      and organization, witch provides an
+                      excellent service that demonstrates its
+                      professionalism. The work and its result
+                      show that a single company is already part
+                      of our strategic partners that they hope to
+                      count on for a long time to consolidate our
+                      process and grow together.</p>
+                    <h5 class="card-title text-center">Hugo H. Hernandez</h5>
+                    <p class="card-text text-center paragraph p-testimonial mb-0">CEO,K2 Inglaterra</p>
+                    <img width="100px" src="./img/estre.png" alt="adoc" class="img-fluid m-auto d-block mt-3">
+                  </div>
+                </div>
+              </div>
+              <div class="col">
+                <div class="card h-100 shadow border border-0">
+                  <div class="m-auto circle position-relative mt-3">
+                    <img src="./img/none.png" class="rounded-circle" alt="customer" style="width: 100%;">
+                    <div class="position-absolute top-50 start-100 translate-middle quote"><img src="./img/quotes.png" class="rounded-circle" alt="customer" style="width: 100%;"></div>
+                  </div>
+                  <div class="card-body">
+                    <p class="card-text text-center paragraph p-testimonial">TREMING is acompany that combines vision
+                      and organization, witch provides an
+                      excellent service that demonstrates its
+                      professionalism. The work and its result
+                      show that a single company is already part
+                      of our strategic partners that they hope to
+                      count on for a long time to consolidate our
+                      process and grow together.</p>
+                    <h5 class="card-title text-center">Hugo H. Hernandez</h5>
+                    <p class="card-text text-center paragraph p-testimonial mb-0">CEO,K2 Inglaterra</p>
+                    <img width="100px" src="./img/estre.png" alt="adoc" class="img-fluid m-auto d-block mt-3">
+                  </div>
+                </div>
+
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
   <!-- ********************** SECCION ASKED *********************-->
 
   <section class="section-2 mt-5">
@@ -426,7 +582,8 @@
           </h2>
           <div id="flush-collapseOne" class="accordion-collapse collapse" aria-labelledby="flush-headingOne"
             data-bs-parent="#accordionFlushExample">
-            <div class="accordion-body bg-ask-item paragraph">Placeholder content for this accordion, which is intended to
+            <div class="accordion-body bg-ask-item paragraph">Placeholder content for this accordion, which is intended
+              to
               demonstrate the
               <code>.accordion-flush</code> class. This is the first item's accordion body.
             </div>
@@ -441,7 +598,8 @@
           </h2>
           <div id="flush-collapseTwo" class="accordion-collapse collapse" aria-labelledby="flush-headingTwo"
             data-bs-parent="#accordionFlushExample">
-            <div class="accordion-body bg-ask-item paragraph">Placeholder content for this accordion, which is intended to
+            <div class="accordion-body bg-ask-item paragraph">Placeholder content for this accordion, which is intended
+              to
               demonstrate the
               <code>.accordion-flush</code> class. This is the second item's accordion body. Let's imagine this being
               filled with some actual content.
@@ -457,7 +615,8 @@
           </h2>
           <div id="flush-collapseThree" class="accordion-collapse collapse" aria-labelledby="flush-headingThree"
             data-bs-parent="#accordionFlushExample">
-            <div class="accordion-body bg-ask-item paragraph">Placeholder content for this accordion, which is intended to
+            <div class="accordion-body bg-ask-item paragraph">Placeholder content for this accordion, which is intended
+              to
               demonstrate the
               <code>.accordion-flush</code> class. This is the third item's accordion body. Nothing more exciting
               happening here in terms of content, but just filling up the space to make it look, at least at first
@@ -475,7 +634,8 @@
           </h2>
           <div id="flush-collapseFour" class="accordion-collapse collapse bg-ask-item"
             aria-labelledby="flush-headingFour" data-bs-parent="#accordionFlushExample">
-            <div class="accordion-body bg-ask-item paragraph">Placeholder content for this accordion, which is intended to
+            <div class="accordion-body bg-ask-item paragraph">Placeholder content for this accordion, which is intended
+              to
               demonstrate the
               <code>.accordion-flush</code> class. This is the third item's accordion body. Nothing more exciting
               happening here in terms of content, but just filling up the space to make it look, at least at first
@@ -546,14 +706,15 @@
           </div>
           <div class="Yourphone">
             <div class="form-floating">
-              <input class="form-control input-heigth shadow color-input mb-3" id="floatingTextarea2" placeholder="Password">
+              <input class="form-control input-heigth shadow color-input mb-3" id="floatingTextarea2"
+                placeholder="Password">
               <label for="floatingTextarea2" class="color-text"> Subject </label>
             </div>
           </div>
           <div class="Yourphone">
             <div class="form-floating">
-              <textarea class="form-control shadow color-input" placeholder="Leave a comment here" id="floatingTextarea2"
-                style="height: 100px"></textarea>
+              <textarea class="form-control shadow color-input" placeholder="Leave a comment here"
+                id="floatingTextarea2" style="height: 100px"></textarea>
               <label for="floatingTextarea2" class="color-text">Your Message</label>
             </div>
           </div>
